Minor spacing fixes

--- a/assets/css/imports/classes.css
+++ b/assets/css/imports/classes.css
@@ -49,7 +49,7 @@
 .footer .nav-item > a,
 .footer .link-item > a { padding: calc(var(--grid-unit) * 2); }
 
-.footer .link-item > a { padding-left: 0; }
+.footer .link-item > a { padding-left: 0 !important; }
 
 .footer .nav-item > a.isActive::before {
     border-width: 0 0 0 var(--grid-unit);
